# traintrack

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  apiproto.sh  build.rs  buildimage.sh  feedproxy-kube.yaml  feedproxy-service-kube.yaml  frontend-kube.yaml  frontend.sh  genproto.sh  kubernetes.yaml  proxy.sh  secrets.sh.template  traintrack-ssl-certificate.yaml  traintrack-ssl-ingress.yaml
data/: Stations.csv  calendar.txt  calendar_dates.txt  trips.txt
googleauth/: Cargo.toml
googleauth/src/: lib.rs
proto/: feedproxy_api.proto  nyct-subway.proto  webclient_api.proto
src/: api_handlers.rs  archive.rs  auth.rs  context.rs  debug_handlers.rs  feedfetcher.rs  feedproxy_api.rs  feedproxy_main.rs  gtfs_realtime.rs  main.rs  nyct_subway.rs  prefs.rs  result.rs  server.rs  statusxml.rs  stops.rs  testutil.rs  utils.rs  webclient_api.rs
static/: Stations.csv  hack559.js  singlepage.html  style.css
templates/: dashboard.html  debug.html  hack559.html  station_detail.html  stoplist.html
ttpredict/: Cargo.toml
ttpredict/src/: gcs.rs  gtfs_realtime.rs  main.rs  storage.rs
webclient/: build-dev.sh  package-lock.json  package.json  tsconfig.json  tslint.json  webpack-dev.config.js  webpack-prod.config.js  webpack.config.js
webclient/src/: about-page.tsx  async.tsx  bootstrap.tsx  datafetcher.ts  debug.tsx  filter-control.tsx  flags.d.ts  lineview.tsx  navigation.tsx  prefetcher.tsx  pub-info.tsx  react-g-anaytics.d.ts  recent-stations.ts  state-actions.ts  state-machine.tsx  station-view.tsx  subway-status.tsx  thunk-types.ts  train-itinerary.tsx  transfer-view.tsx  utils.ts  webclient_api_pb.d.ts  webclient_api_pb.js
webclient/tests/: filter-control.test.ts  recent-stations.test.ts
