[package]
name = "traintrack"
version = "0.1.0"
authors = ["Matt Jones <jonesmr@gmail.com>"]
build = "build.rs"

[dependencies]
base64 = "*"
built = "*"
chrono = "*"
chrono-tz = "*"
csv = "*"
frank_jwt = "*"
getopts = "*"
log = "*"
log4rs = "*"
maplit = "*"
protobuf = "*"
protobuf-json = "*"
regex = "*"
reqwest = "*"
rustc-serialize = "*"
# The latest version of rustful in crates.io is 0.9.0, this
# eventually depends on openssl-sys v0.7.17. However reqwest
# eventually depends on openssl-sys v0.9.25, and we can only
# link against one version.
# The current version of rustful at HEAD from github.com
# resolves this dependency, but hasn't been released to crates.
# TODO(mrjones): Return to crates version of rustful when possible.
#rustful = "*"
rustful = { git = "https://github.com/Ogeon/rustful" }
serde = "*"
serde_derive = "*"
serde_json = "*"
time = "*"
tiny_http = "*"

[build-dependencies]
built = "*"

[[bin]]
name = "traintrack"
path = "src/main.rs"

[[bin]]
name = "feedproxy"
path = "src/feedproxy_main.rs"
