[package]
name = "traintrack"
version = "0.1.0"
authors = ["Matt Jones <jonesmr@gmail.com>"]
build = "build.rs"
edition = "2021"

[dependencies]
ascii = "*"
anyhow = "~1.0"
base64 = "*"
built = "*"
bytes = "*"
chrono = "*"
chrono-tz = "*"
crossbeam = "*"
csv = "*"
frank_jwt = "*"
getopts = "*"
log = "*"
log4rs = "*"
maplit = "*"
prost = "*"
prost-types = "*"
qstring = "0.7.2"
# protobuf = "*"
# protobuf-json = "*"
regex = "*"
reqwest = { version = "*", features = ["blocking", "json"] }
rustc-serialize = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
serde-xml-rs = "*"
tendril = "*"
time = "*"
tiny_http = "*"
xml5ever = "*"

[dev-dependencies]
stringreader = "*"
simple_logger = "*"

#[dev-dependencies.simple_logger]
#default-features = false  # Turn off colorization

[build-dependencies]
built = "*"
prost-build = "*"

[[bin]]
name = "traintrack"
path = "src/main.rs"

[[bin]]
name = "feedproxy"
path = "src/feedproxy_main.rs"
