[package]
name = "ttpredict"
version = "0.1.0"
authors = ["Matt Jones <jonesmr@gmail.com>"]
edition = "2018"

[dependencies]
getopts = "*"
# Use the 2.0 / Alpha version at head.
# We could depend on the 1.x version on crates.io, but then we'll just have to migrate.
oauth2 = { git = "https://github.com/ramosbugs/oauth2-rs" }
url = "*"
